--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,10 @@
       content="Web site created using create-react-app"
     />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+    <link
+    rel="stylesheet"
+    href="https://unpkg.com/swiper@7/swiper-bundle.min.css"
+  />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -30,6 +34,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -40,5 +45,36 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+     <!-- Initialize Swiper -->
+     <script>
+      var menuButton = document.querySelector(".menu-button");
+      var openMenu = function () {
+        swiper.slidePrev();
+      };
+      var swiper = new Swiper(".swiper", {
+        slidesPerView: "auto",
+        initialSlide: 1,
+        resistanceRatio: 0,
+        slideToClickedSlide: true,
+        on: {
+          slideChangeTransitionStart: function () {
+            var slider = this;
+            if (slider.activeIndex === 0) {
+              menuButton.classList.add("cross");
+              // required because of slideToClickedSlide
+              menuButton.removeEventListener("click", openMenu, true);
+            } else {
+              menuButton.classList.remove("cross");
+            }
+          },
+          slideChangeTransitionEnd: function () {
+            var slider = this;
+            if (slider.activeIndex === 1) {
+              menuButton.addEventListener("click", openMenu, true);
+            }
+          },
+        },
+      });
+    </script>
   </body>
 </html>
